<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Caculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pct_15">15%</string>
    <string name="pct_10">10%</string>
    <string name="pct_20">20%</string>
    <string name="tip_lable">Tip is:</string>
    <string name="inputAmountHint_lable">enter the price</string>
    <string name="totalAmount_lable">&quot;Total is: &quot;</string>

</resources>
