<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipActivity" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/inputAmountHint_lable"
        android:singleLine="true"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonTip15"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="calTipAmount"
        android:text="@string/pct_15" />

    <Button
        android:id="@+id/buttonTip10"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonTip15"
        android:layout_toLeftOf="@+id/buttonTip15"
        android:onClick="calTipAmount"
        android:text="@string/pct_10" />

    <Button
        android:id="@+id/buttonTip20"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonTip15"
        android:layout_toRightOf="@+id/buttonTip15"
        android:onClick="calTipAmount"
        android:text="@string/pct_20" />

    <TextView
        android:id="@+id/textViewTipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonTip10"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonTip15"
        android:text="@string/tip_lable"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewTipText"
        android:layout_alignBottom="@+id/textViewTipText"
        android:layout_alignLeft="@+id/buttonTip15"
        android:layout_alignRight="@+id/buttonTip20"
        android:textAlignment="textStart" />

</RelativeLayout>